Use logback for logging, first migration steps